force-app/main/default/objects/RelationshipSetting__mdt/RelationshipSetting__mdt.object-meta.xml
<CustomObject>
    <label>Relationship Setting</label>
    <pluralLabel>Relationship Settings</pluralLabel>
</CustomObject>