force-app/main/default/objects/RelationshipSetting__mdt/fields/ChildField__c.field-meta.xml
<CustomField>
    <fullName>ChildField__c</fullName>
    <label>Child Field</label>
    <metadataRelationshipControllingField>RelationshipSetting__mdt.ChildObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>RelationshipSettings</relationshipLabel>
    <relationshipName>RelationshipSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>