force-app/main/default/objects/RelationshipSetting__mdt/fields/ChildObject__c.field-meta.xml
<CustomField>
    <fullName>ChildObject__c</fullName>
    <label>Child Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>RelationshipSettings</relationshipLabel>
    <relationshipName>RelationshipSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>