force-app/main/default/objects/RelationshipSetting__mdt/fields/ChildRelationshipFieldNew__c.field-meta.xml
<CustomField>
    <fullName>ChildRelationshipFieldNew__c</fullName>
    <label>Child Relationship Field (New)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>