force-app/main/default/objects/RelationshipSetting__mdt/fields/ObjectSetting__c.field-meta.xml
<CustomField>
    <fullName>ObjectSetting__c</fullName>
    <label>Object Setting</label>
    <referenceTo>ObjectSetting__mdt</referenceTo>
    <relationshipName>RelationshipSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>